--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -122,3 +122,47 @@
       </div>
     </div>
   </div>
+  <div class="modal fade video-dialog" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span>
+            </button>
+            <h4 class="modal-title" id="myModalLabel2">Video Record</h4>
+          </div>
+          <form class="form-horizontal form-label-left" novalidate>
+            <div class="modal-body">
+          
+                  <div class="item form-group">
+                    <label class="control-label col-md-2 col-sm-2 col-xs-12" for="video">Number
+                      <span class="required">*</span>
+                    </label>
+                    <div class="col-md-4 col-sm-4 col-xs-12">
+                      <input type="number" id="video" name="video" required="required" class="form-control col-md-7 col-xs-12">
+                    </div>
+                  </div>
+
+                  <div class="item form-group">
+                    <label class="control-label col-md-2 col-sm-2 col-xs-12" for="date">Date
+                      <span class="required">*</span>
+                    </label>
+                    <div class="col-md-4 col-sm-4 col-xs-12">
+                        <div class='input-group date' id='myDatepicker'>
+                            <input id="date" class="form-control col-md-7 col-xs-12" name="date" required="required" type="text">
+                            <span class="input-group-addon">
+                               <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                        </div>
+                    </div>
+                  </div>
+            </div>
+            
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+          </form>  
+        </div>
+      </div>
+    </div>
