--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -4,27 +4,27 @@
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top">
         <i class="fa fa-question"></i> Total Questions</span>
-      <div class="count green">{{statistic.totalQuestion | number}}</div>
+      <div class="count green">{{statistic?.totalQuestion | number}}</div>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top">
         <i class="fa fa-users"></i> Frequent Users</span>
-      <div class="count">{{statistic.totalFrequentUsers | number}}</div>
+      <div class="count">{{statistic?.totalFrequentUsers | number}}</div>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top">
         <i class="fa fa-user"></i> Total Users</span>
-      <div class="count">{{statistic.totalUsers | number}}</div>
+      <div class="count">{{statistic?.totalUsers | number}}</div>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top">
         <i class="fa fa-flag-checkered"></i> Total Countries</span>
-      <div class="count">{{statistic.totalCountries | number}}</div>
+      <div class="count">{{statistic?.totalCountries | number}}</div>
     </div>
     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
       <span class="count_top">
         <i class="fa fa-lightbulb-o"></i> Total Answers</span>
-      <div class="count">{{statistic.totalAnswers | number}}</div>
+      <div class="count">{{statistic?.totalAnswers | number}}</div>
     </div>
   </div>
 
