--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,127 +1,54 @@
 <div class="right_col" role="main">
-    <div class="">
-      <div class="page-title">
-        <div class="title_left">
-          <h3>Videos</h3>
-        </div>
-      </div>
-
-      <div class="clearfix"></div>
-
+    
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
-          <div class="x_panel">
+    
+          <div class="col-md-12 col-sm-12 col-xs-12">
+            <div class="x_panel">
               <div class="x_title">
-                  <ul class="nav navbar-right panel_toolbox">
+                <h2>Videos</h2>
+                <ul class="nav navbar-right panel_toolbox">
                     <li><a data-toggle="modal" data-target=".video-dialog"><i class="fa fa-plus"></i></a>
                     </li>
                   </ul>
-                  <div class="clearfix"></div>
+                <div class="clearfix"></div>
+              </div>
+    
+              <div class="x_content">
+    
+                <div class="table-responsive">
+                  <table class="table table-striped jambo_table bulk_action">
+                    <thead>
+                      <tr class="headings">
+                        <th class="column-title">Nº </th>
+                        <th class="column-title">Date </th>
+                        <th class="column-title no-link last">
+                          <span class="nobr">Action</span>
+                        </th>
+                      </tr>
+                    </thead>
+    
+                    <tbody>
+                      <tr class="even pointer" *ngFor="let video of videos">
+                        <td class=" ">{{video.number}}</td>
+                        <td class=" ">{{video.date}}</td>
+                        <td class=" last">
+                          <a data-toggle="modal" data-target=".video-dialog">Edit</a>
+                        </td>
+                      </tr>
+    
+                    </tbody>
+                  </table>
                 </div>
-            <div class="x_content">
-              <table id="datatable" class="table table-striped table-bordered">
-                <thead>
-                  <tr>
-                    <th>Number</th>
-                    <th>Date</th>
-                    <th></th>
-                  </tr>
-                </thead>
-
-                <tbody>
-                  <tr>
-                    <td>152</td>
-                    <td>13/08/2017</td>
-                    <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                  </tr>
-                  <tr>
-                      <td>152</td>
-                      <td>13/08/2017</td>
-                      <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                    </tr> <tr>
-                        <td>152</td>
-                        <td>13/08/2017</td>
-                        <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                      </tr> <tr>
-                          <td>152</td>
-                          <td>13/08/2017</td>
-                          <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                        </tr> <tr>
-                            <td>152</td>
-                            <td>13/08/2017</td>
-                            <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                          </tr> <tr>
-                              <td>152</td>
-                              <td>13/08/2017</td>
-                              <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                            </tr> <tr>
-                                <td>152</td>
-                                <td>13/08/2017</td>
-                                <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                              </tr> <tr>
-                                  <td>152</td>
-                                  <td>13/08/2017</td>
-                                  <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                </tr> <tr>
-                                    <td>152</td>
-                                    <td>13/08/2017</td>
-                                    <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                  </tr> <tr>
-                                      <td>152</td>
-                                      <td>13/08/2017</td>
-                                      <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                    </tr>
-                                    <tr>
-                                        <td>152</td>
-                                        <td>13/08/2017</td>
-                                        <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                      </tr>
-                                      <tr>
-                                          <td>152</td>
-                                          <td>13/08/2017</td>
-                                          <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                        </tr> <tr>
-                                            <td>152</td>
-                                            <td>13/08/2017</td>
-                                            <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                          </tr> <tr>
-                                              <td>152</td>
-                                              <td>13/08/2017</td>
-                                              <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                            </tr> <tr>
-                                                <td>152</td>
-                                                <td>13/08/2017</td>
-                                                <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                              </tr> <tr>
-                                                  <td>152</td>
-                                                  <td>13/08/2017</td>
-                                                  <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                                </tr> <tr>
-                                                    <td>152</td>
-                                                    <td>13/08/2017</td>
-                                                    <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                                  </tr> <tr>
-                                                      <td>152</td>
-                                                      <td>13/08/2017</td>
-                                                      <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                                    </tr> <tr>
-                                                        <td>152</td>
-                                                        <td>13/08/2017</td>
-                                                        <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                                      </tr> <tr>
-                                                          <td>152</td>
-                                                          <td>13/08/2017</td>
-                                                          <td class="last"><a data-toggle="modal" data-target=".video-dialog" href="#">Edit</a></td>
-                                                        </tr>
-                </tbody>
-              </table>
+    
+              </div>
             </div>
           </div>
-        </div>
     
+        </div>
       </div>
     </div>
-  </div>
+ 
   <div class="modal fade video-dialog" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
