--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -124,7 +124,7 @@
                     <td class=" ">{{question.country}}</td>
                     <td class=" ">{{question.text}}</td>
                     <td class=" last">
-                      <a routerLink="/question-detail">View</a>
+                      <a routerLink="/question-detail/{{question.id}}">View</a>
                     </td>
                   </tr>
 
