topanswers questions link

--- a/src/app/topanswers/topanswers.component.html
+++ b/src/app/topanswers/topanswers.component.html
@@ -46,7 +46,7 @@
                     <td class=" ">{{answer.question}}</td>
                     <td class=" ">{{answer.clicks}}</td>
                     <td class=" last">
-                      <a routerLink="/questions">Questions</a>
+                      <a routerLink="/questions/{{answer.number}}">Questions</a>
                     </td>
                   </tr>
 
