--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -1,39 +1,41 @@
 <div class="right_col" role="main">
 
-  <div class="row tile_count">
-    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-      <span class="count_top">
-        <i class="fa fa-question"></i> Total Questions</span>
-      <div class="count green">{{statistic?.totalQuestion | number}}</div>
-    </div>
-    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-      <span class="count_top">
-        <i class="fa fa-users"></i> Frequent Users</span>
-      <div class="count">{{statistic?.totalFrequentUsers | number}}</div>
-    </div>
-    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-      <span class="count_top">
-        <i class="fa fa-user"></i> Total Users</span>
-      <div class="count">{{statistic?.totalUsers | number}}</div>
-    </div>
-    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-      <span class="count_top">
-        <i class="fa fa-flag-checkered"></i> Total Countries</span>
-      <div class="count">{{statistic?.totalCountries | number}}</div>
-    </div>
-    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-      <span class="count_top">
-        <i class="fa fa-lightbulb-o"></i> Total Answers</span>
-      <div class="count">{{statistic?.totalAnswers | number}}</div>
+  <div id="totals" *ngIf='!answerId'>
+    <div class="row tile_count">
+      <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+        <span class="count_top">
+          <i class="fa fa-question"></i> Total Questions</span>
+        <div class="count green">{{statistic?.totalQuestion | number}}</div>
+      </div>
+      <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+        <span class="count_top">
+          <i class="fa fa-users"></i> Frequent Users</span>
+        <div class="count">{{statistic?.totalFrequentUsers | number}}</div>
+      </div>
+      <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+        <span class="count_top">
+          <i class="fa fa-user"></i> Total Users</span>
+        <div class="count">{{statistic?.totalUsers | number}}</div>
+      </div>
+      <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+        <span class="count_top">
+          <i class="fa fa-flag-checkered"></i> Total Countries</span>
+        <div class="count">{{statistic?.totalCountries | number}}</div>
+      </div>
+      <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+        <span class="count_top">
+          <i class="fa fa-lightbulb-o"></i> Total Answers</span>
+        <div class="count">{{statistic?.totalAnswers | number}}</div>
+      </div>
     </div>
   </div>
 
-  <div class="row">
+  <div class="row" *ngIf='!answerId'>
     <div class="col-md-12 col-sm-12 col-xs-12">
       <div class="col-md-12 col-sm-12 col-xs-12">
 
         <div class="x_panel">
-          <div class="x_title">
+          <div class="x_title" >
             <h2>Filter
             </h2>
             <ul class="nav navbar-right panel_toolbox">
@@ -91,7 +93,7 @@
       <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
           <div class="x_title">
-            <h2>Questions</h2>
+            <h2>Questions <span *ngIf='answerId'>from Answer Nº{{answerId}}</span></h2>
             <div class="clearfix"></div>
           </div>
 
