--- a/src/app/answers/answers.component.html
+++ b/src/app/answers/answers.component.html
@@ -36,7 +36,7 @@
                         <td class=" ">{{answer.id}}</td>
                         <td class=" ">{{answer.subject}}</td>
                         <td class=" last">
-                          <a routerLink="/answer/{{answer.id}}">Edit</a>
+                          <a href="/answer/{{answer.id}}">Edit</a>
                         </td>
                       </tr>
     
