--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -8,7 +8,7 @@
               <div class="x_title">
                 <h2>Videos</h2>
                 <ul class="nav navbar-right panel_toolbox">
-                    <li><a data-toggle="modal" data-target=".video-dialog"><i class="fa fa-plus"></i></a>
+                    <li><a (click)="resetVideo()"data-toggle="modal" data-target=".video-dialog"><i class="fa fa-plus"></i></a>
                     </li>
                   </ul>
                 <div class="clearfix"></div>
@@ -33,7 +33,7 @@
                         <td class=" ">{{video.number}}</td>
                         <td class=" ">{{video.date}}</td>
                         <td class=" last">
-                          <a data-toggle="modal" data-target=".video-dialog">Edit</a>
+                          <a (click)="setVideo(video)" data-toggle="modal" data-target=".video-dialog">Edit</a>
                         </td>
                       </tr>
     
@@ -56,7 +56,8 @@
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span>
             </button>
-            <h4 class="modal-title" id="myModalLabel2">Video Record</h4>
+            <h4 class="modal-title" id="myModalLabel2" *ngIf="videoRec && videoRec.id==null">New Video</h4>
+            <h4 class="modal-title" id="myModalLabel2" *ngIf="videoRec && videoRec.id!=null">Edit Video {{videoRec.id}}</h4>
           </div>
           <form class="form-horizontal form-label-left" novalidate>
             <div class="modal-body">
@@ -66,7 +67,7 @@
                       <span class="required">*</span>
                     </label>
                     <div class="col-md-4 col-sm-4 col-xs-12">
-                      <input type="number" id="video" name="video" required="required" class="form-control col-md-7 col-xs-12">
+                      <input *ngIf='videoRec' [(ngModel)]='videoRec.number' type="number" id="video" name="video" required="required" class="form-control col-md-7 col-xs-12">
                     </div>
                   </div>
 
@@ -76,7 +77,8 @@
                     </label>
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class='input-group date' id='myDatepicker'>
-                            <input id="date" class="form-control col-md-7 col-xs-12" name="date" required="required" type="text">
+                            <input *ngIf='videoRec' [(ngModel)]='videoRec.date' id="date" class="form-control col-md-7 col-xs-12" name="date" required="required" type="text">
+                            <input *ngIf='videoRec' [(ngModel)]='videoRec.id' id="id" type="hidden">
                             <span class="input-group-addon">
                                <span class="glyphicon glyphicon-calendar"></span>
                             </span>
