--- a/src/app/topanswers/topanswers.component.html
+++ b/src/app/topanswers/topanswers.component.html
@@ -18,7 +18,7 @@
             </ul>
             <div class="clearfix"></div>
           </div>
-
+          <app-message></app-message>
           <div class="x_content">
 
             <div class="table-responsive">
