--- a/src/app/answer/answer.component.html
+++ b/src/app/answer/answer.component.html
@@ -6,9 +6,10 @@
                   <div class="x_title">
                     <h2 *ngIf='!answer?.number'>New Answer</h2>
                     <h2 *ngIf='answer?.number'>Edit Answer {{answer?.number}}</h2>
-                    <div class="clearfix"></div>
+                    {{message}}
+                     <div class="clearfix"></div>
                   </div>
-        
+                  <app-message></app-message>        
                   <div class="x_content">
                          <form class="form-horizontal form-label-left" novalidate>
                           <div class="item form-group">
@@ -145,16 +146,16 @@
                                 </div>
                               </div>
 
-                              <div *ngIf="answer" id="editor-one" class="editor-wrapper" [innerHTML]='answer.content'></div>
-                              <textarea  id="textarea" style="display:none;" required="required" name="textarea" class="form-control col-md-7 col-xs-12"></textarea>
-
+                              <div #divContent onchange="content.value=this.innerHTML" *ngIf="answer" id="editor-one" class="editor-wrapper" [innerHTML]='answer.content'></div>
+                              <textarea id="content" style="visibility:hidden" required="required" name="content" class="form-control col-md-7 col-xs-12"></textarea>
+                            
                             </div>
                           </div>
                           <div class="ln_solid"></div>
                           <div class="form-group">
                             <div class="col-md-6 col-md-offset-3">
                               <button type="submit" class="btn btn-primary">Cancel</button>
-                              <button id="send" type="submit" class="btn btn-success">Save</button>
+                              <button id="save" type="submit" class="btn btn-success" (click)="saveAnswer(answer)">Save</button>
                             </div>
                           </div>
                         </form>
