--- a/src/app/answers/answers.component.html
+++ b/src/app/answers/answers.component.html
@@ -16,7 +16,7 @@
                 </ul>
                 <div class="clearfix"></div>
               </div>
-    
+              <app-message></app-message>
               <div class="x_content">
     
                 <div class="table-responsive">
