--- a/src/app/question-detail/question-detail.component.html
+++ b/src/app/question-detail/question-detail.component.html
@@ -61,6 +61,12 @@
                 </li>
               </ul>
             </div>
+
+            <div class="col-md-6 col-md-offset-3">
+                <button type="button" (click)="backList()" class="btn btn-primary">Back</button>
+            </div>
+
+
           </div>
         </div>
       </div>
