move providers and add error message

--- a/src/app/visitors/visitors.component.html
+++ b/src/app/visitors/visitors.component.html
@@ -6,6 +6,7 @@
       </h2>
       <div class="clearfix"></div>
     </div>
+    <app-message></app-message>
     <div class="x_content">
       <div class="dashboard-widget-content">
         <div class="col-md-4 hidden-small">
