--- a/src/app/question-detail/question-detail.component.html
+++ b/src/app/question-detail/question-detail.component.html
@@ -10,6 +10,7 @@
 
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
+          <app-message></app-message>
 
           <div class="x_content">
             <div class="col-md-3 col-sm-3 col-xs-12 profile_left">
