routerlink  do add records

--- a/src/app/answers/answers.component.html
+++ b/src/app/answers/answers.component.html
@@ -32,7 +32,7 @@
                         <td class=" ">{{answer.id}}</td>
                         <td class=" ">{{answer.subject}}</td>
                         <td class=" last">
-                          <a href="/answer/{{answer.id}}">Edit</a>
+                          <a routerLink="/answer/{{answer.id}}">Edit</a>
                         </td>
                       </tr>
     
