icheck to topanswers

--- a/src/app/topanswers/topanswers.component.html
+++ b/src/app/topanswers/topanswers.component.html
@@ -11,8 +11,7 @@
               <li>
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" (click)="loadTopAnswers(feedback.checked)" #feedback /> Just with feedback
-                    <!--input type="checkbox" class="flat" (click)="loadTopAnswers(feedback.checked)" #feedback /> Just with feedback -->
+                    <input type="checkbox" class="flat" /> Just with feedback
                   </label>
                 </div>
               </li>
