--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -63,7 +63,7 @@
               <div class="col-md-2 col-sm-12 col-xs-12 form-group">
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" (change)="reloadQuestions()" [(ngModel)]="filter.justFeedback"> Just with feedback
+                    <input type="checkbox" class="flat" > Just with feedback
                   </label>
                 </div>
               </div>
