fix topanswers icheck

--- a/src/app/topanswers/topanswers.component.html
+++ b/src/app/topanswers/topanswers.component.html
@@ -11,7 +11,7 @@
               <li>
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox"  /> Just with feedback
+                    <input type="checkbox" class="flat" /> Just with feedback
                   </label>
                 </div>
               </li>
