--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container body">
     <div class="main_container">
-      <div class="col-md-3 left_col">
+      <div class="col-md-3 left_col" *ngIf="isLogin()">
         <div class="left_col scroll-view">
           <div class="navbar nav_title" style="border: 0;">
             <a href="index.html" class="site_title"><i class="fa fa-space-shuttle"></i> <span>Ask Alien Console</span></a>
@@ -11,7 +11,7 @@
           <!-- sidebar menu 
               Questions Answers Add Answer Top Answers Videos Statistics Usage            
           -->
-          <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+          <div id="sidebar-menu" class="main_menu_side hidden-print main_menu" >
             <div class="menu_section">
               <h3>General</h3>
               <ul class="nav side-menu">
@@ -34,7 +34,7 @@
       </div>
 
       <!-- top navigation -->
-      <div class="top_nav">
+      <div class="top_nav" *ngIf="isLogin()">
         <div class="nav_menu">
           <nav>
             <div class="nav toggle">
@@ -44,11 +44,11 @@
             <ul class="nav navbar-nav navbar-right">
               <li class="">
                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                  Admin
+                  {{getUserName()}}
                   <span class=" fa fa-angle-down"></span>
                 </a>
                 <ul class="dropdown-menu dropdown-usermenu pull-right">
-                  <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                  <li><a href="#" (click)="logOut()" ><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                 </ul>
               </li>
 
@@ -65,7 +65,7 @@
       <!-- /page content -->
 
       <!-- footer content -->
-      <footer>
+      <footer *ngIf="isLogin()">
         <div class="pull-right">
           Ask Alien Console by Muniz 2017
         </div>
